add in filterchar code